# tutorial_blog

./: .gitignore  README.md  _quarto.yml  blog.qmd  index.html  index.md  index.qmd  pyproject.toml
docs/: blog.html  index.html  index.md
