[project]
name = "tutorial-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "matplotlib>=3.10.6",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
]
